--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,17 @@ requires-python = ">=3.11,<4.0"
 authors = [{ name = "Jean-Simon Laverdière", email = "you@example.com" }]
 
 dependencies = [
-    "numpy>=2.3",
-    "pandas>=2.3",
-    "matplotlib>=3.10",
-    "seaborn>=0.13",
-    "statsmodels>=0.14",
-    "scipy>=1.16",
-    "scikit-learn>=1.7",
-    "jupyter>=1.1"
+    "numpy>=1.20",
+    "pandas>=2.0,<2.4",
+    "matplotlib>=3.4",
+    "seaborn>=0.11",
+    "statsmodels>=0.12",
+    "scipy>=1.7",
+    "scikit-learn>=1.0",
+    "jupyter>=1.0",
+    "wrds>=3.4.0",
+    "ipykernel>=6.0",
+    "yfinance (>=0.2.66,<0.3.0)"
 ]
 
 [build-system]
